--- a/projects/project_0/Project0.StoreApplication.Client/Project0.StoreApplication.Client.csproj
+++ b/projects/project_0/Project0.StoreApplication.Client/Project0.StoreApplication.Client.csproj
@@ -1,17 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="Current">
+  <ItemGroup>
+    <PackageReference Include="serilog" Version="2.10.0" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Project0.StoreApplication.Domain\Project0.StoreApplication.Domain.csproj" />
     <ProjectReference Include="..\Project0.StoreApplication.Storage\Project0.StoreApplication.Storage.csproj" />
   </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="serilog" Version="2.10.0" />
-  </ItemGroup>
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <FileUpgradeFlags>
+    </FileUpgradeFlags>
+    <UpgradeBackupLocation>
+    </UpgradeBackupLocation>
+    <OldToolsVersion>2.0</OldToolsVersion>
+    <ProjectGuid>{F5497A6D-5534-427E-AD9C-7E98728C25B2}</ProjectGuid>
   </PropertyGroup>
-
 </Project>
