--- a/projects/project_0_final/Project0.StoreApplication.Testing/Project0.StoreApplication.Testing.csproj
+++ b/projects/project_0_final/Project0.StoreApplication.Testing/Project0.StoreApplication.Testing.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Project0_StoreApplication_Domain\Project0_StoreApplication_Domain.csproj" />
+    <ProjectReference Include="..\Project0.StoreApplication.Domain\Project0.StoreApplication.Domain.csproj" />
   </ItemGroup>
 
 </Project>
