--- a/projects/project_0/Project0.StoreApplication.Client/Project0.StoreApplication.Client.csproj
+++ b/projects/project_0/Project0.StoreApplication.Client/Project0.StoreApplication.Client.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="Current">
   <ItemGroup>
     <PackageReference Include="serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Project0.StoreApplication.Domain\Project0.StoreApplication.Domain.csproj" />
