--- a/codingchallenges/7_GuessingGame/7_GuessingGameAnswers/7_GuessingGameChallenge.csproj
+++ b/codingchallenges/7_GuessingGame/7_GuessingGameAnswers/7_GuessingGameChallenge.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp5.0</TargetFramework>
-    <RootNamespace>_6_FlowControl</RootNamespace>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RootNamespace>_7_GuessingGameChallenge</RootNamespace>
   </PropertyGroup>
 
 </Project>
