--- a/codingchallenges/9_Classes/9_ClassesAnswers/9_ClassesChallenge.csproj
+++ b/codingchallenges/9_Classes/9_ClassesAnswers/9_ClassesChallenge.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp5.0</TargetFramework>
-    <RootNamespace>_6_FlowControl</RootNamespace>
+    <TargetFramework>net5.0</TargetFramework>
+    <RootNamespace>_9_ClassesChallenge</RootNamespace>
   </PropertyGroup>
 
 </Project>
