--- a/WebAPIDemoBusinessLayer/WebAPIDemoBusinessLayer.csproj
+++ b/WebAPIDemoBusinessLayer/WebAPIDemoBusinessLayer.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="NewFolder\**" />
+    <EmbeddedResource Remove="NewFolder\**" />
+    <None Remove="NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.9">
       <PrivateAssets>all</PrivateAssets>
@@ -16,10 +22,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\WebAPIDemoDataAcess\WebAPIDemoDataAcess.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="NewFolder\" />
   </ItemGroup>
 
 	
