attempting to setup auth0; not working yet

--- a/WebAPIDemo/appsettings.json
+++ b/WebAPIDemo/appsettings.json
@@ -8,8 +8,14 @@
   },
 
   "ConnectionStrings": {
-      "Database": "Server = (localdb)\\MSSQLLocalDB; Database = PracticeSandbox; Trusted_Connection = True;"
+    "Database": "Server = (localdb)\\MSSQLLocalDB; Database = PracticeSandbox; Trusted_Connection = True;"
+  },
+
+  "Auth0": {
+    "Domain": "dev-16fan1ey.us.auth0.com",
+    "Audience":  "https://swordspell/api"
   },
 
   "AllowedHosts": "*"
+
 }
